--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,7 @@ img {
 header#heading {
   position: relative;
   height: 600px;
-  background: url(/images/bg-pattern-intro.svg) 35% 50% no-repeat;
+  background: url(images/bg-pattern-intro.svg) 35% 50% no-repeat;
   border-bottom-left-radius: 100px;
 }
 header#heading::after {
@@ -362,7 +362,7 @@ section#sec-2 .container {
   grid-template-areas: "imggg para";
 }
 section#sec-2 .overlay-img {
-  background: url(/images/illustration-phones.svg) no-repeat;
+  background: url(images/illustration-phones.svg) no-repeat;
   height: 600px;
   width: 100%;
   margin: -55px 0;
